--- a/docker-example/petclinic/data-access.properties
+++ b/docker-example/petclinic/data-access.properties
@@ -22,3 +22,5 @@ hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Property that determines which database to use with an AbstractJpaVendorAdapter
 jpa.database=MYSQL
+
+jpa.showSql=true
